--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         // --- CONFIGURATION ---
         // <!-- WARNING: Storing API keys in frontend code is insecure and should not be done in a production environment. -->
         // <!-- For this prototype, replace "YOUR_GEMINI_API_KEY" with your actual key. -->
-        const apiKey = ""; 
+        const apiKey = "AIzaSyDLy5BkQSNi13TK8FIvtwW7b0Rg1R4uPAg"; 
         const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
         // --- STATE ---
