--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- SEO: Meta description for better search engine visibility. -->
     <meta name="description" content="Smart Raasta generates a personalized career roadmap for the Pakistani job market. Get a step-by-step guide with milestones, skills, and resources tailored to your goals.">
     <!-- Favicon: Link to a placeholder favicon. -->
-    <link id="favicon" rel="icon" href="https://placehold.co/32x32/14b8a6/FFFFFF?text=S" type="image/png">
+    <link id="favicon" rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%2314b8a6' stroke='%2314b8a6' stroke-width='8' stroke-linecap='round' d='M20 20 C40 20, 40 50, 50 50 C60 50, 60 80, 80 80'/%3E%3C/svg%3E" type="image/svg+xml">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- html2pdf.js for PDF generation -->
