--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- SEO: Meta description for better search engine visibility. -->
     <meta name="description" content="Smart Raasta generates a personalized career roadmap for the Pakistani job market. Get a step-by-step guide with milestones, skills, and resources tailored to your goals.">
     <!-- Favicon: Link to a placeholder favicon. -->
-    <link id="favicon" rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%2314b8a6' stroke='%2314b8a6' stroke-width='8' stroke-linecap='round' d='M20 20 C40 20, 40 50, 50 50 C60 50, 60 80, 80 80'/%3E%3C/svg%3E" type="image/svg+xml">
+    data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='1' x2='1' y2='0'%3E%3Cstop stop-color='%230d9488'/%3E%3Cstop offset='1' stop-color='%2314b8a6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M20 80 L 45 55 L 60 70 L 80 20' stroke='url(%23g)' stroke-width='6' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='20' cy='80' r='8' fill='%23f9fafb' stroke='url(%23g)' stroke-width='4'/%3E%3Ccircle cx='45' cy='55' r='6' fill='%2314b8a6'/%3E%3Ccircle cx='60' cy='70' r='6' fill='%2314b8a6'/%3E%3Ccircle cx='80' cy='20' r='8' fill='%2314b8a6'/%3E%3C/svg%3E
     
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- html2pdf.js for PDF generation -->
