--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <h2 class="text-2xl font-bold text-center mb-6">Want to Know More About Us?</h2>
                         <div class="max-w-3xl mx-auto text-center space-y-4" style="color: var(--text-secondary);">
                             <p>Smart Raasta isn’t just another career platform — it’s a guide built for Pakistanis, by Pakistanis, who understand the real challenges students and professionals face here.Our mission is simple: to turn ambition into opportunity.We help you find your direction through clear, practical, and data-driven career roadmaps — all tailored to the realities of Pakistan’s evolving job market.Whether you’re just starting out or looking to grow in your career, Smart Raasta is here to help you take the next step with confidence.</p>
-                            <a href="https://muhammad-owias.github.io/portfolio/" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-6 rounded-lg transition-colors">
+                            <a href="https://muhammad-owais-1947.github.io/portfolio/" target="_blank" rel="noopener noreferrer" class="inline-block mt-2 bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-6 rounded-lg transition-colors">
                                 Visit Our Website
                             </a>
                         </div>
