--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
             </div>
         </div>
     </div>
+
+    <div id="email-modal-overlay" class="hidden fixed inset-0 flex justify-center items-center z-40 p-4">
+  <div class="w-full max-w-md bg-gray-900 rounded-xl shadow-2xl p-6">
+    <h2 class="text-2xl font-bold text-white mb-4">Enter Your Email</h2>
+    <form id="email-form">
+      <input type="email" id="email-input" class="w-full bg-gray-800 border border-gray-700 text-white rounded-lg p-3 mb-4" placeholder="your@email.com" required>
+      <button type="submit" id="login-btn" class="w-full bg-teal-600 hover:bg-teal-700 text-white font-bold py-3 rounded-lg">Login</button>
+    </form>
+  </div>
+</div>
     <!-- =================================================================== -->
     <!-- SECTION: Main Application                                           -->
     <!-- =================================================================== -->
