--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Raasta - Your Career Roadmap</title>
-    
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Tailwind -->
+    <meta name="description" content="Smart Raasta generates a personalized career roadmap for the Pakistani job market.">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='1' x2='1' y2='0'%3E%3Cstop stop-color='%230d9488'/%3E%3Cstop offset='1' stop-color='%2314b8a6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M20 80 L 45 55 L 60 70 L 80 20' stroke='url(%23g)' stroke-width='6' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='20' cy='80' r='8' fill='%23f9fafb' stroke='url(%23g)' stroke-width='4'/%3E%3Ccircle cx='45' cy='55' r='6' fill='%2314b8a6'/%3E%3Ccircle cx='60' cy='70' r='6' fill='%2314b8a6'/%3E%3Ccircle cx='80' cy='20' r='8' fill='%2314b8a6'/%3E%3C/svg%3E" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- HTML2PDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="h-screen overflow-hidden">
+<body class="h-screen overflow-hidden text-white">
     
     <!-- HEADER -->
     <header id="main-header" class="fixed top-0 left-0 right-0 px-6 py-4 z-50 flex justify-between items-center">
